MEDIUM / add virtual model fml rest api
